+ Updated `pages_config` to include Dubai + Added Dubai to list of locations in Career page + Fixed image file name + Center-aligned items in list of locations in Career page

--- a/src/sass/static/pages.scss
+++ b/src/sass/static/pages.scss
@@ -1147,6 +1147,10 @@ body #not_authenticated_financial ul.checked > li {
                     margin-bottom: 30px;
                 }
             }
+
+            .container {
+                justify-content: center;
+            }
         }
         .values-group {
             margin-bottom: 20px;
